--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "db:prod:build": "npm run db:prod:init && npm run db:prod:deploy && npm run db:seed",
+    "db:prod:init": "bash sqitch_script.sh -i",
+    "db:prod:deploy": "bash sqitch_script.sh -d",
+    "db:dev:build": "npm run db:dev:init && npm run db:dev:deploy && npm run db:seed",
+    "db:dev:init": "bash dev_sqitch_script.sh -i",
+    "db:dev:deploy": "bash dev_sqitch_script.sh -d",
+    "db:seed": "bash migrations/seed.sh"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +26,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "pg": "^8.10.0"
+    "joi": "^17.9.1",
+    "pg": "^8.10.0",
+    "swagger-ui-express": "^4.6.2",
+    "yaml": "^2.2.1"
   }
 }
