Add booking and authentication for back-office (#34)
* adding authentification and user sql (#28)

* fixing swagger documentation with updated road and exemple (#29)

* booking addition (#30)

* creating table and crub for booking in sql

* backoffice and views for booking

* adding booking to home

* adding API and swagger for booking

* Adding test with cypress, logout action and product interaction (#31)

* add cypress and logout action

* add switch button for list product and testing the result

* refactoring and fixing bug

* update view and seeding (#32)

* Addding authentification, cypress and booking (#33)

* fixing bug

---------

Co-authored-by: Guillaume Felicite <felicite.guillaume@gmail.com>

--- a/package.json
+++ b/package.json
@@ -7,25 +7,32 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "scss:build": "sass assets/scss:public/css --no-source-map",
+    "scss:watch": "sass --watch assets/scss:public/css --no-source-map",
     "db:prod:build": "npm run db:prod:init && npm run db:prod:deploy && npm run db:seed",
     "db:prod:init": "bash sqitch_script.sh -i",
     "db:prod:deploy": "bash sqitch_script.sh -d",
     "db:dev:build": "npm run db:dev:init && npm run db:dev:deploy && npm run db:seed",
     "db:dev:init": "bash dev_sqitch_script.sh -i",
     "db:dev:deploy": "bash dev_sqitch_script.sh -d",
-    "db:seed": "bash migrations/seed.sh"
+    "db:seed": "bash migrations/seed.sh",
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.38.0"
+    "cypress": "^12.10.0",
+    "eslint": "^8.38.0",
+    "sass": "^1.62.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.9.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.10.0",
